gcc/testsuite/rust/rustc/ui/recursion_limit/no-value_dg.rs
// Test the parse error for no value provided to recursion_limit

#![recursion_limit]
// { dg-error "" "" { target *-*-* } .-1 }

fn main() {}

